# python-clean-architecture

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  __main__.py  config.py  logger.py
app/core/: exceptions.py
app/core/dtos/: auth.py  user.py
app/core/entities/: user.py
app/core/ports/: crypto.py  unit_of_work.py  user.py
app/core/usecases/user/: __init__.py  authenticate_user.py  create_user.py  delete_user.py  get_user.py  update_user.py
app/core/value_objects/: __init__.py  email.py  id.py  password.py
app/infra/api/: app.py  lifespan.py
app/infra/api/dependencies/: auth.py  crypto.py  user.py
app/infra/api/dependencies/usecases/: user.py
app/infra/api/routers/: root.py
app/infra/api/routers/v1/: __init__.py  auth.py  user.py
app/infra/auth/: jwt.py
app/infra/db/: __init__.py
app/infra/db/migrations/: env.py
app/infra/db/migrations/versions/: 001_initial_migration.py  6d62029bb66e_add_name_column_to_users_table.py
app/infra/db/models/: user.py
app/infra/db/repositories/: user.py
app/infra/db/unit_of_work/: base.py  user.py
docs/: FAQ.md
tests/: conftest.py
tests/integration/infra/api/: conftest.py  test_extensions.py
tests/integration/infra/security/: test_crypto.py
tests/unit/core/entities/: test_user.py
tests/unit/core/usecases/: test_create_user_usecase.py  test_user.py
tests/unit/core/value_objects/: test_email.py  test_password.py
(+1 files in other folders)
