[tool.poetry]
name = "app"
version = "0.1.0"
description = "Clean Architecture Python Backend Template"
authors = ["alefeans <alefeans2@hotmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
alembic = "^1.10.2"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"
sqlmodel = "^0.0.22"
httpx = "^0.27.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.1"
bcrypt = "^4.2.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.6"
email-validator = "^2.2.0"
asgi-lifespan = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.4"
mypy = "^1.11.2"
pytest-watch = "^4.2.0"
types-passlib = "^1.7.7"
types-python-jose = "^3.3.4"
pre-commit = "^3.8.0"
asgi-lifespan = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.scripts]
app = "app:start_server"

[tool.black]
line-length = 95

[tool.ruff]
line-length = 95
